--- a/yatube/posts/templates/base.html
+++ b/yatube/posts/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html> <!-- Используется html 5 версии -->
 <html lang="ru"> <!-- Язык сайта - русский -->
   <head>
@@ -5,17 +6,20 @@
     <!-- Сайт готов работать с мобильными устройствами -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Загружаем фав-иконки -->
-    <link rel="icon" href="img/fav/fav.ico" type="image">
+    <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
     <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <!-- Подключен файл со стандартными стилями бустрап -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>Последние обновления на сайте</title>
   </head>
   <body>
+  <header>
+    {% include 'includes/header.html' %}
+  </header>
     <main>
       {% block content %}
       <!-- класс py-5 создает отступы сверху и снизу блока -->
@@ -38,7 +42,7 @@
             и Бабарыкинымъ, ругалъ Сержпутовскому и ничего не сдѣлалъ, вотъ 3 упрека, которыя дѣлаю с
             ебѣ за нынѣшній день. (3)
           </p>
-          <a href="posts/group_list.html">все записи группы</a>
+          <a href="group/group_list.html">все записи группы</a>
         </article>
         <hr>
         <article>
@@ -62,7 +66,7 @@
             накрылъ Крыжановскій, что, признаюсь, было мнѣ не совсѣмъ пріятно. Упрекаю себя за
             безхарактерность, что не высидѣлъ дома, и зa праздность цѣлаго дня. Это главный пунктъ. (2)
           </p>
-          <a href="posts/group_list.html">все записи группы</a>
+          <a href="group/group_list.html">все записи группы</a>
         </article>
         <hr>
         <article>
@@ -82,12 +86,15 @@
             Гембичомъ, потомъ болталъ съ Шубинымъ и съ Сашей Горчаковымъ. — Исключая праздности,
             днемъ своимъ очень доволенъ. (1)
           </p>
-          <a href="posts/group_list.html">все записи группы</a>
+          <a href="group/group_list.html">все записи группы</a>
         </article>
         <!-- под последним постом нет линии -->
       </div>
       {% endblock %}
     </main>
+    <footer class="border-top text-center py-3">
+    {% include 'includes/footer.html' %}
+    </footer>
     <!-- Использованы классы бустрапа: -->
     <!-- border-top: создаёт тонкую линию сверху блока -->
     <!-- text-center: выравнивает текстовые блоки внутри блока по центру -->
