--- a/yatube/posts/templates/posts/index.html
+++ b/yatube/posts/templates/posts/index.html
@@ -1,4 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-{{ posts }}
+{% for post in posts %}
+  <ul>
+    <li>
+      Автор: {{ post.author.get_full_name }}
+    </li>
+    <li>
+      Дата публикации: {{ post.pub_date|date:"d E Y" }}
+    </li>
+  </ul>
+  <p>{{ post.text }}</p>
+  {% if post.group %}
+  <a href="{% url 'posts:postsname' post.group.slug %}">все записи группы</a>
+{% endif %}
+  {% if not forloop.last %}<hr>{% endif %}
+{% endfor %}
 {% endblock %}
