--- a/yatube/posts/templates/posts/index.html
+++ b/yatube/posts/templates/posts/index.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Последние обновления на сайте{% endblock %}
+
 {% block content %}
 {% for post in posts %}
   <ul>
@@ -11,8 +13,8 @@
   </ul>
   <p>{{ post.text }}</p>
   {% if post.group %}
-  <a href="{% url 'posts:postsname' post.group.slug %}">все записи группы</a>
-{% endif %}
+    <p><a href="{% url 'posts:postsname' 'post.group.slug' %}">все записи группы</a></p>
+  {% endif %}
   {% if not forloop.last %}<hr>{% endif %}
 {% endfor %}
 {% endblock %}
