--- a/yatube/posts/templates/base.html
+++ b/yatube/posts/templates/base.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Последние обновления на сайте</title>
+    <title>{% block title %}Последние обновления на сайте{% endblock %}</title>
   </head>
   <body>
   <header>
@@ -95,9 +95,5 @@
     <footer class="border-top text-center py-3">
     {% include 'includes/footer.html' %}
     </footer>
-    <!-- Использованы классы бустрапа: -->
-    <!-- border-top: создаёт тонкую линию сверху блока -->
-    <!-- text-center: выравнивает текстовые блоки внутри блока по центру -->
-    <!-- py-3: контент внутри размещается с отступом сверху и снизу -->
   </body>
 </html>
